Correccion en confirm mail

--- a/NaturaApp.Api/Views/Shared/_Layout.cshtml
+++ b/NaturaApp.Api/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - NaturaApp - Keypress Software<a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
+            &copy; 2021 - NaturaApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidad</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
