--- a/NaturaApp.Api/Views/Home/Index.cshtml
+++ b/NaturaApp.Api/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">NaturaApp</h1>
+    <h1 class="display-4">App</h1>
     <img src="~/images/logo.png" />
 </div>
